# win-ax206-display

./: .gitignore  README.md  ax206-sensor-panel-plan.md  pyproject.toml
reference/: drv_dpf.c
src/ax206panel/: __init__.py  __main__.py  app.py  device.py  framebuffer.py  patterns.py  tray.py
src/ax206panel/render/: engine.py  theme.py  widgets.py
src/ax206panel/sensors/: __init__.py  base.py  lhm.py  psutil_src.py
tests/: test_device.py  test_framebuffer.py  test_sensors.py  test_theme.py
themes/: default.yaml
tools/: dump_descriptors.py  fetch_lhm.py  test_pattern.py
