[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ax206-panel"
version = "0.1.0"
description = "Open-source AIDA64 SensorPanel replacement for AX206 USB LCDs (Windows)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-or-later" }
dependencies = [
    "pyusb>=1.2.1",
    "Pillow>=10.0",
    "numpy>=1.26",
    "psutil>=5.9",
    "pythonnet>=3.0",
    "PyYAML>=6.0",
    "pystray>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
ax206-panel = "ax206panel.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
